# enterprise_knowledge_assistant

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.hf  Makefile  README.md  Test_QA_Set.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh
app/admin/: __init__.py  dashboard_service.py
app/api/: dependencies.py  main.py  routes_admin.py  routes_ask.py  routes_auth.py  routes_feedback.py  routes_ingest.py  routes_sources.py  schemas.py
app/auth/: security.py  service.py
app/cache/: __init__.py  cache_service.py  keys.py  query_cache.py
app/core/: config.py  deps_check.py  errors.py  executors.py  logging.py  ml_preload.py  startup_state.py
app/documents/: chunker.py  hashing.py  jobs.py  loaders.py  metadata.py  ocr.py  pdf_parser.py  table_extractor.py
app/evaluation/: __init__.py  golden_set.py  metrics.py  run.py
app/feedback/: repository.py  service.py
app/generation/: answer_finalize.py  answer_service.py  citation_service.py  ollama_client.py  prompts.py  streaming.py
app/indexing/: bm25_store.py  chroma_store.py  embeddings.py  index_reset.py  ingest_service.py
app/memory/: __init__.py  models.py  repository.py  service.py
app/observability/: __init__.py  json_logging.py  metrics.py  trace.py
app/retrieval/: filters.py  hybrid.py  reranker.py
data/documents/: Customer_FAQ.md  HR_Policy.docx  Process_Documents.docx  Technical_Guide.md
eval/: golden_qa.yaml  golden_qa_extended.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/data/: app.db
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AdminDashboard.tsx  ChatMessageView.tsx  ChatPage.tsx  FeedbackModal.tsx  LoginPage.tsx  (+4 more)
project_documentations/: API.md  demo_script.md
scripts/: clean_all.py  clear_cache.py  delete_last_trace.py  export_feedback.py  generate_extended_qa.py  ingest_documents.py  reindex_documents.py  seed_users.py
tests/: test_answer_guardrails.py  test_api_ask.py  test_auth.py  test_chunker.py  test_hybrid_retrieval.py  test_latency.py  test_metadata.py  test_qa_set.py  test_raw_ollama.py  test_retrieval_acl.py  test_stream_latency.py
(+5 files in other folders)
