[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = "Enterprise RAG knowledge assistant using free/local AI models"
authors = [
    { name = "Dhanush Krishna" }
]
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # HTTP client
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # Database
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    # Document parsing
    "pdfplumber>=0.11.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "pandas>=2.2.0",
    "openpyxl>=3.1.4",
    # Embeddings + ML
    "numpy>=1.26.4,<2.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    # Vector store
    "chromadb>=0.5.0,<1.0.0",
    # Keyword search
    "rank-bm25>=0.2.2",
    # Caching
    "diskcache>=5.6.3",
    # HTTP client
    "httpx>=0.27.0",
    # Tokenization for chunking
    "tiktoken>=0.7.0",
    # Logging
    "python-json-logger>=2.0.7",
    # YAML
    "pyyaml>=6.0.1",
    # Utilities
    "tqdm>=4.66.4",
    "rich>=13.7.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "pdf2image>=1.17.0",
    "easyocr>=1.7.1",
]
tables-advanced = [
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.9.0",
]
pdf-advanced = [
    # PyMuPDF is AGPL/commercial dual-licensed — keep optional
    "PyMuPDF>=1.24.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-PyYAML",
    "types-passlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
